[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/player_panel.gd" id="1_panel"]

[node name="PlayerPanel" type="PanelContainer"]
custom_minimum_size = Vector2(220, 180)
mouse_filter = 0
script = ExtResource("1_panel")

[node name="MiddleArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NameLabel" type="Label" parent="MiddleArea"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
anchor_bottom = 0.28
grow_horizontal = 2
mouse_filter = 2
horizontal_alignment = 1
text = "Player"

[node name="LifeLabel" type="Label" parent="MiddleArea"]
layout_mode = 1
anchors_preset = 15
anchor_top = 0.18
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
horizontal_alignment = 1
vertical_alignment = 1
text = "40"
